--- a/LeetCode/691-700/691. 贴纸拼词（困难）.md
+++ b/LeetCode/691-700/691. 贴纸拼词（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[691. 贴纸拼词](https://leetcode.cn/problems/stickers-to-spell-word/solution/by-ac_oier-5vv3/)** ，难度为 **困难**。
 
-Tag : 「记忆化搜索」、「DFS」、「状态压缩」、「爆搜」
+Tag : 「记忆化搜索」、「DFS」、「状压 DP」、「爆搜」、「动态规划」、「二进制枚举」、「状态压缩」
 
 
 
@@ -43,7 +43,7 @@ Tag : 「记忆化搜索」、「DFS」、「状态压缩」、「爆搜」
 
 ---
 
-### DFS + 记忆化搜索
+### 动态规划（记忆化搜索）
 
 为了方便，我们记 $ss = stickers$，$t = target$，其中 $t$ 的长度为 $n$。
 
@@ -86,6 +86,107 @@ class Solution {
         Arrays.fill(f, -1);
         int ans = dfs(0);
         return ans == INF ? -1 : ans;
+    }
+}
+```
+* 时间复杂度：令 $n$ 和 $m$ 分别代表字符串 `t` 的长度和数组 `ss` 的长度。共有 $2^n$ 个状态，单次状态的计算复杂度为 $$O(\sum_{i = 0}^{m - 1}ss[i].length \times n)$$。整体复杂度为 $$O(2^n \times \sum_{i = 0}^{m - 1}ss[i].length \times n)$$
+* 空间复杂度：$O(2^n)$
+
+---
+
+### 动态规划
+
+定义 $f[state]$ 为当前 $t$ 的凑成情况为 $state$ 时，使用的最少贴纸数量。
+
+对应的我们有 $f[0] = 0$，代表当 $t$ 的任何一位都不被凑成时，所需要的最小贴纸数量为 $0$。
+
+每次我们尝试使用有效的状态 $s$（$f[s]$ 不为 `INF`  为有效状态）来更新新状态 $ns$，状态转移过程与解法一类似，每次尝试使用任意的 $ss[i]$ 来得到新的 $ns$。
+
+代码：
+```Java
+class Solution {
+    static int N = 15, INF = 20;
+    static int[] f = new int[1 << N];
+    public int minStickers(String[] ss, String t) {
+        int n = ss.length, m = t.length(), mask = 1 << m;
+        Arrays.fill(f, INF);
+        f[0] = 0;
+        for (int s = 0; s < mask; s++) {
+            if (f[s] == INF) continue;
+            for (String str : ss) {
+                int ns = s, len = str.length();
+                for (int i = 0; i < len; i++) {
+                    int c = str.charAt(i) - 'a';
+                    for (int j = 0; j < m; j++) {
+                        if (t.charAt(j) - 'a' == c && (((ns >> j) & 1) == 0)) {
+                            ns |= (1 << j);
+                            break;
+                        }
+                    }
+                }
+                f[ns] = Math.min(f[ns], f[s] + 1);
+            }
+        }
+        return f[mask - 1] == INF ? -1 : f[mask - 1];
+    }
+}
+```
+* 时间复杂度：令 $n$ 和 $m$ 分别代表字符串 `t` 的长度和数组 `ss` 的长度。共有 $2^n$ 个状态，单次状态的计算复杂度为 $$O(\sum_{i = 0}^{m - 1}ss[i].length \times n)$$。整体复杂度为 $$O(2^n \times \sum_{i = 0}^{m - 1}ss[i].length \times n)$$
+* 空间复杂度：$O(2^n)$
+
+---
+
+### 预处理优化 
+
+在解法一和解法二的状态转移过程中，我们每次都尝试枚举所有的 $ss[i]$ 来将 $s$ 更新为 $ns$。
+
+实际上，可以有效填充 $t$ 中尚未被占用字符的 $ss[i]$ 可能只是少数，因此我们可以先预处理每个 $ss[i]$ 到底能够提供那些字符。
+
+在将状态 $s$ 更新为 $ns$ 时，我们只枚举那些有效的 $ss[i]$。
+
+代码：
+```Java 
+class Solution {
+    static int N = 15, INF = 20;
+    static int[] f = new int[1 << N];
+    public int minStickers(String[] ss, String t) {
+        int n = ss.length, m = t.length(), mask = 1 << m;
+        Map<Integer, List<Integer>> map = new HashMap<>();
+        for (int i = 0; i < n; i++) {
+            String str = ss[i];
+            for (char c : str.toCharArray()) {
+                int d = c - 'a';
+                List<Integer> list = map.getOrDefault(d, new ArrayList<>());
+                if (list.size() == 0 || list.get(list.size() - 1) != i) list.add(i);
+                map.put(d, list);
+            }
+        }
+        Arrays.fill(f, INF);
+        f[0] = 0;
+        for (int s = 0; s < mask; s++) {
+            if (f[s] == INF) continue;
+            int loc = -1;
+            for (int i = 0; i < m && loc == -1; i++) {
+                if (((s >> i) & 1) == 0) loc = i;
+            }
+            if (loc == -1) continue;
+            List<Integer> list = map.getOrDefault(t.charAt(loc) - 'a', new ArrayList<>());
+            for (int i = 0; i < list.size(); i++) {
+                String str = ss[list.get(i)];
+                int ns = s, len = str.length();
+                for (int j = 0; j < len; j++) {
+                    char c = str.charAt(j);
+                    for (int k = 0; k < m; k++) {
+                        if (t.charAt(k) == c && (((ns >> k) & 1) == 0)) {
+                            ns |= (1 << k);
+                            break;
+                        }
+                    }
+                }
+                f[ns] = Math.min(f[ns], f[s] + 1);
+            }
+        }
+        return f[mask - 1] == INF ? -1 : f[mask - 1];
     }
 }
 ```
