--- a/LeetCode/461-470/467. 环绕字符串中唯一的子字符串（中等）.md
+++ b/LeetCode/461-470/467. 环绕字符串中唯一的子字符串（中等）.md
@@ -45,8 +45,8 @@ Tag : 「线性 DP」、「树状数组」
 
 ### 线性 DP + 树状数组 + 同字符最大长度计数
 
-> 早上起来没睡醒，第一反应是用「线性 DP + 树状数组」来做，估了一下时间复杂度没问题就写了。
-该做法可能有一定的思维难度，因此可能不是这道中等题的标准解法。
+> ~~早上起来没睡醒~~ 老了，脑袋不行了，第一反应是用「线性 DP + 树状数组」来做，估了一下时间复杂度没问题就写了。
+该做法有一点点思维难度，因此可能不是这道中等题的标准解法。
 
 **定义 $f[i]$ 为以 $s[i]$ 为结尾的最大有效子串的长度。** 
 
@@ -110,7 +110,37 @@ class Solution {
 }
 ```
 * 时间复杂度：$O(n\log{n})$
-* 空间复杂度：$O(C \times N)$，其中 $C = 26$ 为字符串 `p` 的字符集大小
+* 空间复杂度：$O(C \times n)$，其中 $C = 26$ 为字符串 `p` 的字符集大小
+
+---
+
+### 线性 DP
+
+对于相同的结尾字符 $c$ 而言，如果在整个动规过程中的最大长度为 $len$，那么以 $c$ 为结尾字符对答案的贡献为 $len$。
+
+基于此，我们只需保留解法一中的 `max` 数组即可，同时利用 $f[i]$ 只依赖于 $f[i - 1]$ 进行更新，因此动规数组也可以使用一个变量来代替。
+
+代码：
+```Java
+class Solution {
+    public int findSubstringInWraproundString(String _p) {
+        char[] cs = _p.toCharArray();
+        int n = cs.length, ans = 0;
+        int[] max = new int[26];
+        max[cs[0] - 'a']++;
+        for (int i = 1, j = 1; i < n; i++) {
+            int c = cs[i] - 'a', p = cs[i - 1] - 'a';
+            if ((p == 25 && c == 0) || p + 1 == c) j++;
+            else j = 1;
+            max[c] = Math.max(max[c], j);
+        }
+        for (int i = 0; i < 26; i++) ans += max[i];
+        return ans;
+    }
+}
+```
+* 时间复杂度：$O(n)$
+* 空间复杂度：$O(C)$，其中 $C = 26$ 为字符串 `p` 的字符集大小
 
 ---
 
