--- a/LeetCode/781-790/783. 二叉搜索树节点最小距离（简单）.md
+++ b/LeetCode/781-790/783. 二叉搜索树节点最小距离（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[783. 二叉搜索树节点最小距离](https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/solution/gong-shui-san-xie-yi-ti-san-jie-shu-de-s-7r17/)** ，难度为 **简单**。
 
-Tag : 「树的搜素」、「迭代」、「非迭代」、「中序遍历」、「BFS」、「DFS」
+Tag : 「树的搜索」、「迭代」、「非迭代」、「中序遍历」、「BFS」、「DFS」
 
 
 
