--- a/LeetCode/551-560/560. 和为 K 的子数组（中等）.md
+++ b/LeetCode/551-560/560. 和为 K 的子数组（中等）.md
@@ -22,7 +22,7 @@ Tag : 「前缀和」、「哈希表」
 ```
 
 提示：
-* $1 <= nums.length <= 2 * 10^4$
+* $1 <= nums.length <= 2 \times 10^4$
 * $-1000 <= nums[i] <= 1000$
 * $-10^7 <= k <= 10^7$
 
