--- a/LeetCode/201-210/209. 长度最小的子数组（中等）.md
+++ b/LeetCode/201-210/209. 长度最小的子数组（中等）.md
@@ -42,7 +42,7 @@ Tag : 「前缀和」、「二分」
 
 利用 $nums[i]$ 的数据范围为 $[1, 10^5]$，可知前缀和数组满足「单调递增」。
 
-我们先预处理出前缀和数组 `sum`（前缀和数组下标默认从 $1$ 开始），对于每个 $nums[i]$ 而言，假设其对应的前缀和值为 $s = sum[i + 1]$，我们将 $nums[i]$ 视为子数组的右端点，问题转换为：在前缀和数组下标 $[0, i]$ 范围内找到满足 **值小于等于 $s - t$** 的最大下标，充当子数组左端点的前一个值。
+我们先预处理出前缀和数组 `sum`（前缀和数组下标默认从 $1$ 开始），对于每个 $nums[i]$ 而言，假设其对应的前缀和值为 $s = sum[i + 1]$，我们将 $nums[i]$ 视为子数组的右端点，问题转换为：在前缀和数组下标 $[0, i]$ 范围内找到满足「**值小于等于 $s - t$**」的最大下标，充当子数组左端点的前一个值。
 
 利用前缀和数组的「单调递增」（即具有二段性），该操作可使用「二分」来做。
 
