修正错别字 1020.飞地的数量

--- a/LeetCode/1011-1020/1020. 飞地的数量（中等）.md
+++ b/LeetCode/1011-1020/1020. 飞地的数量（中等）.md
@@ -48,7 +48,7 @@ Tag : 「DFS」、「并查集」
 具体的，我们按照如下流程进行处理：
 
 * 初始化并查集：起始让每个单元格独立作为一个连通块；
-* 使用 `DFS`  标记所有「边缘陆地连通块」：从位于边缘的「边缘陆地」进行出发，将其所在连通块与超级源点 $0$ 进行联通标记（同时为了确保复杂度，我们在进行 `DFS` 前需要先检查当前陆地与超级源点的联通关系，如果已联通，说明当前陆地棣属于之前的某个连通块，已被整体标记过，进行跳过即可）；
+* 使用 `DFS`  标记所有「边缘陆地连通块」：从位于边缘的「边缘陆地」进行出发，将其所在连通块与超级源点 $0$ 进行联通标记（同时为了确保复杂度，我们在进行 `DFS` 前需要先检查当前陆地与超级源点的联通关系，如果已联通，说明当前陆地隶属于之前的某个连通块，已被整体标记过，进行跳过即可）；
 * 统计答案：遍历整个棋盘，统计所有不与超级源点 $0$ 联通的陆地数量。
 
 > 一些细节：由于我们人为规定了超级源点编号为 $0$，同时棋盘下标从 $0$ 开始，因此对某个点 $(x, y)$ 的编号，我们需要增加一个偏移量，例如 $idx = x * n + y + 1$。
