--- a/LeetCode/441-450/450. 删除二叉搜索树中的节点（中等）.md
+++ b/LeetCode/441-450/450. 删除二叉搜索树中的节点（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[450. 删除二叉搜索树中的节点](https://leetcode.cn/problems/delete-node-in-a-bst/solution/by-ac_oier-s60a/)** ，难度为 **中等**。
 
-Tag : 「递归」、「BST」
+Tag : 「递归」、「BST」、「二叉树」
 
 
 
