--- a/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
+++ b/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
@@ -2,37 +2,42 @@
 
 这是 LeetCode 上的 **[1239. 串联字符串的最大长度](https://leetcode-cn.com/problems/maximum-length-of-a-concatenated-string-with-unique-characters/solution/gong-shui-san-xie-yi-ti-san-jie-jian-zhi-nfeb/)** ，难度为 **中等**。
 
-Tag : 「DFS」、「二进制枚举」、「模拟退火」
+Tag : 「DFS」、「二进制枚举」、「模拟退火」、「随机化」
 
 
 
-给定一个字符串数组 arr，字符串 s 是将 arr 某一子序列字符串连接所得的字符串，如果 s 中的每一个字符都只出现过一次，那么它就是一个可行解。
+给定一个字符串数组 `arr`，字符串 `s` 是将 `arr` 某一子序列字符串连接所得的字符串，如果 `s` 中的每一个字符都只出现过一次，那么它就是一个可行解。
 
-请返回所有可行解 s 中最长长度。
+请返回所有可行解 `s` 中最长长度。
 
 
 示例 1：
 ```
 输入：arr = ["un","iq","ue"]
+
 输出：4
+
 解释：所有可能的串联组合是 "","un","iq","ue","uniq" 和 "ique"，最大长度为 4。
 ```
 示例 2：
 ```
 输入：arr = ["cha","r","act","ers"]
+
 输出：6
+
 解释：可能的解答有 "chaers" 和 "acters"。
 ```
 示例 3：
 ```
 输入：arr = ["abcdefghijklmnopqrstuvwxyz"]
+
 输出：26
 ```
 
 提示：
-* 1 <= arr.length <= 16
-* 1 <= arr[i].length <= 26
-* arr[i] 中只含有小写英文字母
+* $1 <= arr.length <= 16$
+* $1 <= arr[i].length <= 26$
+* `arr[i]` 中只含有小写英文字母
 
 ---
 
@@ -291,10 +296,8 @@ class Solution {
             int prev = calc(); 
             swap(ws, a, b);
             int cur = calc(); 
-            int diff = prev - cur;
-            if (Math.log(diff / t) >= random.nextDouble()) { 
-                swap(ws, a, b);
-            }
+            int diff = cur - prev;
+            if (Math.log(-diff / t) > random.nextDouble()) swap(ws, a, b);
         }
     }
     int[] ws;
