--- a/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
+++ b/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
@@ -2,14 +2,14 @@
 
 这是 LeetCode 上的 **[1723. 完成所有工作的最短时间](https://leetcode-cn.com/problems/find-minimum-time-to-finish-all-jobs/solution/gong-shui-san-xie-yi-ti-shuang-jie-jian-4epdd/)** ，难度为 **困难**。
 
-Tag : 「DFS」、「模拟退火」
+Tag : 「DFS」、「模拟退火」、「启发式搜素」、「随机化」
 
 
 
 
-给你一个整数数组 jobs ，其中 jobs[i] 是完成第 i 项工作要花费的时间。
+给你一个整数数组 `jobs` ，其中 $jobs[i]$ 是完成第 $i$ 项工作要花费的时间。
 
-请你将这些工作分配给 k 位工人。所有工作都应该分配给工人，且每项工作只能分配给一位工人。
+请你将这些工作分配给 $k$ 位工人。所有工作都应该分配给工人，且每项工作只能分配给一位工人。
 
 工人的 工作时间 是完成分配给他们的所有工作花费时间的总和。
 
@@ -125,7 +125,6 @@ class Solution {
 
 ![image.png](https://pic.leetcode-cn.com/1620405014-nIidei-image.png)
 
-
 代码：
 ```Java
 class Solution {
@@ -196,11 +195,11 @@ class Solution {
     int ans = 0x3f3f3f3f;    
     Random random = new Random(20210508);
     // 最高温/最低温/变化速率（以什么速度进行退火，系数越低退火越快，迭代次数越少，落入「局部最优」（WA）的概率越高；系数越高 TLE 风险越大）
-    double hi = 1e4, lo = 1e-4, fa = 0.90; 
+    double hi = 1e5, lo = 1e-5, fa = 0.90; 
     // 迭代次数，与变化速率同理
-    int N = 400; 
+    int N = 400;
 
-    // 计算当前 jobs 序列对应的最小「最大工作时间 」是多少
+    // 计算当前 jobs 序列对应的最小「最大工作时间」是多少
     int calc() {
         Arrays.fill(works, 0);
         for (int i = 0; i < n; i++) {
@@ -219,6 +218,12 @@ class Solution {
         ans = Math.min(ans, cur);
         return cur;
     }
+    void shuffle(int[] nums) {
+        for (int i = n; i > 0; i--) {
+            int idx = random.nextInt(i);
+            swap(nums, idx, i - 1);
+        }
+    }
     void swap(int[] arr, int i, int j) {
         int c = arr[i];
         arr[i] = arr[j];
@@ -230,17 +235,16 @@ class Solution {
             int prev = calc(); // 退火前
             swap(jobs, a, b);
             int cur = calc(); // 退火后
-            int diff = prev - cur;
+            int diff = cur - prev;
             // 退火为负收益（温度上升），以一定概率回退现场
-            if (Math.log(diff / t) < random.nextDouble()) { 
-                swap(jobs, a, b);
-            }
+            if (Math.log(diff / t) > random.nextDouble()) swap(jobs, a, b);
         }
     }
     public int minimumTimeRequired(int[] _jobs, int _k) {
         jobs = _jobs;
         n = jobs.length;
         k = _k;
+        shuffle(jobs);
         while (N-- > 0) sa();
         return ans;
     }
