--- a/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
+++ b/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
@@ -285,12 +285,19 @@ class Solution {
         ans = Math.max(ans, cur);
         return cur;
     }
-    void swap(int[] arr, int i, int j) {
-        int c = arr[i];
-        arr[i] = arr[j];
-        arr[j] = c;
+    void shuffle(int[] nums) {
+        for (int i = n; i > 0; i--) {
+            int idx = random.nextInt(i);
+            swap(nums, idx, i - 1);
+        }
+    }
+    void swap(int[] nums, int a, int b) {
+        int c = nums[a];
+        nums[a] = nums[b];
+        nums[b] = c;
     }
     void sa() {
+        shuffle(ws);
         for (double t = hi; t > lo; t *= fa) {
             int a = random.nextInt(n), b = random.nextInt(n);
             int prev = calc(); 
