--- a/Index/数学.md
+++ b/Index/数学.md
@@ -34,6 +34,7 @@
 | [462. 最少移动次数使数组元素相等 II](https://leetcode.cn/problems/minimum-moves-to-equal-array-elements-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/minimum-moves-to-equal-array-elements-ii/solution/by-ac_oier-db44/) | 中等 | 🤩🤩🤩 |
 | [470. 用 Rand7() 实现 Rand10()](https://leetcode-cn.com/problems/implement-rand10-using-rand7/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/implement-rand10-using-rand7/solution/gong-shui-san-xie-k-jin-zhi-zhu-wei-shen-zmd4/) | 中等 | 🤩🤩🤩🤩 |
 | [477. 汉明距离总和](https://leetcode-cn.com/problems/total-hamming-distance/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/total-hamming-distance/solution/gong-shui-san-xie-ying-yong-cheng-fa-yua-g21t/) | 简单 | 🤩🤩🤩 |
+| [478. 在圆内随机生成点](https://leetcode.cn/problems/generate-random-point-in-a-circle/) | [LeetCode 题解链接](https://leetcode.cn/problems/generate-random-point-in-a-circle/solution/by-ac_oier-btkm/) | 中等 | 🤩🤩🤩🤩 |
 | [479. 最大回文数乘积](https://leetcode-cn.com/problems/largest-palindrome-product/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/largest-palindrome-product/solution/by-ac_oier-t8j7/) | 困难 | 🤩🤩🤩 |
 | [483. 最小好进制](https://leetcode-cn.com/problems/smallest-good-base/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/smallest-good-base/solution/gong-shui-san-xie-xiang-jie-ru-he-fen-xi-r94g/) | 困难 | 🤩🤩🤩🤩 |
 | [507. 完美数](https://leetcode-cn.com/problems/perfect-number/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/perfect-number/solution/gong-shui-san-xie-jian-dan-mo-ni-tong-ji-e6jk/) | 简单 | 🤩🤩🤩 |
