--- a/Index/分块.md
+++ b/Index/分块.md
@@ -1,4 +1,5 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [933. 最近的请求次数](https://leetcode-cn.com/problems/number-of-recent-calls/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/number-of-recent-calls/solution/by-ac_oier-evqe/) | 简单 | 🤩🤩🤩🤩🤩    |
+| [732. 我的日程安排表 III](https://leetcode-cn.com/problems/my-calendar-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-iii/solution/by-ac_oier-cv31/) | 困难 | 🤩🤩🤩      |
 
