699.掉落的方块（困难）修改了题解链接

--- a/LeetCode/691-700/699. 掉落的方块（困难）.md
+++ b/LeetCode/691-700/699. 掉落的方块（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[699. 掉落的方块](https://leetcode-cn.com/problems/degree-of-an-array/solution/shu-zu-ji-shu-ha-xi-biao-ji-shu-jie-fa-y-a0mg/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[699. 掉落的方块](https://leetcode.cn/problems/falling-squares/solution/by-ac_oier-zpf0/)** ，难度为 **困难**。
 
 Tag : 「线段树（动态开点）」、「线段树」
 
