--- a/LeetCode/471-480/475. 供暖器（中等）.md
+++ b/LeetCode/471-480/475. 供暖器（中等）.md
@@ -38,7 +38,7 @@ Tag : 「排序」、「二分」、「双指针」
 ```
 
 提示：
-* $1 <= houses.length, heaters.length <= 3 * 10^4$
+* $1 <= houses.length, heaters.length <= 3 \times 10^4$
 * $1 <= houses[i], heaters[i] <= 10^9$
 
 ---
@@ -89,7 +89,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $n$ 和 $m$ 分别为 `houses` 和 `heaters` 长度，$L = 1e9$ 为最大长度，对其进行排序复杂度为 $O(n\log{n} + m\log{m})$，在 $[0, L]$ 范围进行二分，单次 `check` 会使用「双指针」判断是否每个 $houses[i]$ 是否被覆盖，复杂度为 $O(\max(n, m) * \log{L})$。整体复杂度为 $O(\max(n, m) * \log{L})$
+* 时间复杂度：令 $n$ 和 $m$ 分别为 `houses` 和 `heaters` 长度，$L = 1e9$ 为最大长度，对其进行排序复杂度为 $O(n\log{n} + m\log{m})$，在 $[0, L]$ 范围进行二分，单次 `check` 会使用「双指针」判断是否每个 $houses[i]$ 是否被覆盖，复杂度为 $O(\max(n, m) \times \log{L})$。整体复杂度为 $O(\max(n, m) \times \log{L})$
 * 空间复杂度：排序所需要消耗的空间。复杂度为 $O(\log{n} + \log{m})$
 
 ---
