--- a/LeetCode/871-880/875. 爱吃香蕉的珂珂（中等）.md
+++ b/LeetCode/871-880/875. 爱吃香蕉的珂珂（中等）.md
@@ -46,8 +46,8 @@ Tag : 「二分」
 
 因此我们可以二分 $k$ 值，在以 $k$ 为分割点的数组上具有「二段性」：
 
-* 小于 $k$ 的值，总耗时 $ans$ 必然不满足 $ans \leq h$；
-* 大于等于 $k$ 的值，总耗时 $ans$ 必然满足 $ans \leq h$。
+* 小于 $k$ 的值，总耗时 $ans$ 必然不满足 $ans \leq h$
+* 大于等于 $k$ 的值，总耗时 $ans$ 必然满足 $ans \leq h$
 
 然后我们需要确定二分的范围，每堆香蕉至少消耗一个小时，因此大于 $\max(piles[i])$ 的速度值 $k$ 是没有意义的（与 $k = \max(piles[i])$ 等价），因此我们可以先对 `piles` 进行一次遍历，找最大值，再二分；也可以直接利用数据范围 $1 <= piles[i] <= 10^9$ 确定一个粗略边界进行二分。
 
