--- a/LeetCode/1031-1040/1036. 逃离大迷宫（困难）.md
+++ b/LeetCode/1031-1040/1036. 逃离大迷宫（困难）.md
@@ -6,7 +6,7 @@ Tag : 「几何」、「BFS」
 
 
 
-在一个 $10^6$ x $10^6$ 的网格中，每个网格上方格的坐标为 $(x, y)$ 。
+在一个 $10^6 \times 10^6$ 的网格中，每个网格上方格的坐标为 $(x, y)$ 。
 
 现在从源方格 $source = [s_x, s_y]$ 开始出发，意图赶往目标方格 $target = [t_x, t_y]$ 。
 
@@ -54,7 +54,7 @@ Tag : 「几何」、「BFS」
 
 整理题意为：在一个足够大的空间里，有少数的障碍物，问两点是否连通。
 
-当两点相隔较远时，常规的 `BFS` 做法可能会搜完整个棋盘，而棋盘大小为 $10^6 * 10^6$，会 `TLE`。
+当两点相隔较远时，常规的 `BFS` 做法可能会搜完整个棋盘，而棋盘大小为 $10^6 \times 10^6$，会 `TLE`。
 
 考虑什么情况下两点会不连通？
 
@@ -82,9 +82,9 @@ Tag : 「几何」、「BFS」
 
 ![image.png](https://pic.leetcode-cn.com/1641856898-BYFygs-image.png)
 
-即给定 $n$ 的情况下，根据「等差数列求和」可知，最大所能围成的面积为 $1 + 2 + ... + n - 1 = \frac{n * (n - 1)}{2}$。
+即给定 $n$ 的情况下，根据「等差数列求和」可知，最大所能围成的面积为 $1 + 2 + ... + n - 1 = \frac{n \times (n - 1)}{2}$。
 
-因此如果从 $s$ 和 $t$ 出发，能够访问的点数超过 $\frac{n * (n - 1)}{2}$ 个，那么两点并没有被围住，必然联通。
+因此如果从 $s$ 和 $t$ 出发，能够访问的点数超过 $\frac{n \times (n - 1)}{2}$ 个，那么两点并没有被围住，必然联通。
 
 最后，为了在 `BFS` 过程中记录某些点被访问过，可以通过计算某个位置哈希值（数值）来实现。
 
@@ -125,6 +125,7 @@ class Solution {
 }
 ```
 
+-
 
 ```C++
 class Solution {
@@ -163,6 +164,7 @@ public:
 };
 ```
 
+-
 
 ```Python
 EDGE, MAX, BASE, DIR = int(1e6), int(1e5), 131, [(1, 0), (-1, 0), (0, 1), (0, -1)]
@@ -190,8 +192,8 @@ class Solution:
             return len(vis) > MAX
         return check(source, target) and check(target, source)
 ```
-* 时间复杂度：令 $n$ 为 $blocked$ 大小，两次 `BFS` 的最大访问点数为 $\frac{n * (n - 1)}{2}$。整体复杂度为 $O(n^2)$
-* 空间复杂度：两次 `BFS` 的最大访问点数为 $\frac{n * (n - 1)}{2}$。整体复杂度为 $O(n^2)$
+* 时间复杂度：令 $n$ 为 $blocked$ 大小，两次 `BFS` 的最大访问点数为 $\frac{n \times (n - 1)}{2}$。整体复杂度为 $O(n^2)$
+* 空间复杂度：两次 `BFS` 的最大访问点数为 $\frac{n \times (n - 1)}{2}$。整体复杂度为 $O(n^2)$
 
 ---
 
