--- a/Index/前缀和.md
+++ b/Index/前缀和.md
@@ -10,6 +10,7 @@
 | [396. 旋转函数](https://leetcode-cn.com/problems/rotate-function/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/rotate-function/solution/by-ac_oier-sxbi/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [427. 建立四叉树](https://leetcode.cn/problems/construct-quad-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/construct-quad-tree/solution/by-ac_oier-maul/) | 中等 | 🤩🤩🤩🤩     |
 | [437. 路径总和 III](https://leetcode-cn.com/problems/path-sum-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/path-sum-iii/solution/gong-shui-san-xie-yi-ti-shuang-jie-dfs-q-usa7/) | 中等 | 🤩🤩🤩🤩     |
+| [497. 非重叠矩形中的随机点](https://leetcode.cn/problems/random-point-in-non-overlapping-rectangles/) | [LeetCode 题解链接](https://leetcode.cn/problems/random-point-in-non-overlapping-rectangles/solution/by-ac_oier-mhi6/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [523. 连续的子数组和](https://leetcode-cn.com/problems/continuous-subarray-sum/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/continuous-subarray-sum/solution/gong-shui-san-xie-tuo-zhan-wei-qiu-fang-1juse/) | 中等 | 🤩🤩🤩🤩     |
 | [525. 连续数组](https://leetcode-cn.com/problems/contiguous-array/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/contiguous-array/solution/gong-shui-san-xie-qian-zhui-he-ha-xi-bia-q400/) | 中等 | 🤩🤩🤩🤩     |
 | [528. 按权重随机选择](https://leetcode-cn.com/problems/random-pick-with-weight/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/random-pick-with-weight/solution/gong-shui-san-xie-yi-ti-shuang-jie-qian-8bx50/) | 中等 | 🤩🤩🤩🤩     |
