--- a/LeetCode/721-730/730. 统计不同回文子序列（困难）.md
+++ b/LeetCode/721-730/730. 统计不同回文子序列（困难）.md
@@ -57,7 +57,7 @@ Tag : 「区间 DP」、「动态规划」
   * 当 $l = r - 1$ 时，说明字符 $k$ 中间不存在任何字符，此时字符 $k$ 对 $f[i][j]$ 的贡献为 $2$，包括 `k` 和 `kk` 两种回文方案；
   * 其余情况，可根据已算得的「小区间回文方案」进行延伸（两段分别补充位于 $l$ 和 $r$ 的字符 $k$），得到新的大区间方案，此部分对 $f[i][j]$ 的贡献是 $f[l + 1][r - 1]$，另外还有 `k` 和 `kk` 两种回文方案，因此总的对答案的贡献为 $f[l + 1][r - 1] + 2$。
 
-统计 $s[i...j]$ 中各类字符「最靠左」和「最靠右」的位置，可通过调整枚举方向来实现：从大到小枚举 $i$，同时维护 `L[s[i]-'a'] = i`，即可得到「最靠左」的位置；在确定左端点 $i$ 之后，从小到达枚举右端点 $j$，同时维护 `R[s[i]-'a'] = j`，即可得到「最靠右」的位置。
+统计 $s[i...j]$ 中各类字符「最靠左」和「最靠右」的位置，可通过调整枚举方向来实现：从大到小枚举 $i$，同时维护 `L[s[i]-'a'] = i`，即可得到「最靠左」的位置；在确定左端点 $i$ 之后，从小到大枚举右端点 $j$，同时维护 `R[s[j]-'a'] = j`，即可得到「最靠右」的位置。
 
 代码：
 ```Java
