--- a/LeetCode/921-930/926. 将字符串翻转到单调递增（中等）.md
+++ b/LeetCode/921-930/926. 将字符串翻转到单调递增（中等）.md
@@ -57,8 +57,8 @@ class Solution {
     public int minFlipsMonoIncr(String s) {
         char[] cs = s.toCharArray();
         int n = cs.length, ans = 0;
-        int[] g = new int[n + 1];
-        Arrays.fill(g, 0x3f3f3f3f);
+        int[] g = new int[n + 10];
+        Arrays.fill(g, n + 10);
         for (int i = 0; i < n; i++) {
             int t = s.charAt(i) - '0';
             int l = 1, r = i + 1;
