--- a/LeetCode/531-540/532. 数组中的 k-diff 数对（中等）.md
+++ b/LeetCode/531-540/532. 数组中的 k-diff 数对（中等）.md
@@ -153,7 +153,10 @@ class Solution {
             if (list.isEmpty() || i != list.get(list.size() - 1)) list.add(i);
         }
         Arrays.fill(cnt, 0);
-        for (int i : nums) cnt[Collections.binarySearch(list, i)]++;
+        for (int i = 0, j = 0; i < nums.length; i++) {
+            if (nums[i] != list.get(j)) j++;
+            cnt[j]++;
+        }
         int n = list.size(), idx = 0, ans = 0, l = 0, r = 0;
         for (int i : list) {
             if (k == 0) {
